# oglGame

./: CMakeLists.txt
resource/shaders/: fragment_shader.txt
src/: main.cpp
src/Render/: ShaderRender.cpp  ShaderRender.h
src/Resource/: ResourceManager.cpp  ResourceManager.h
